Added processor module, see #3136