@@ -64,4 +64,24 @@ public class Parameter {
         int index = s.indexOf( '=' );
         return new Parameter( s.substring( 0, index ).trim(), s.substring( index + 1 ).trim() );
     }
+
+    @Override
+    public boolean equals( Object o ) {
+        if ( this == o ) { return true; }
+        if ( o == null || getClass() != o.getClass() ) { return false; }
+
+        Parameter parameter = (Parameter) o;
+
+        if ( name != null ? !name.equals( parameter.name ) : parameter.name != null ) { return false; }
+        if ( value != null ? !value.equals( parameter.value ) : parameter.value != null ) { return false; }
+
+        return true;
+    }
+
+    @Override
+    public int hashCode() {
+        int result = name != null ? name.hashCode() : 0;
+        result = 31 * result + ( value != null ? value.hashCode() : 0 );
+        return result;
+    }
 }
