@@ -20,4 +20,24 @@ public class Pair<T, U> implements Serializable {
     @Override public String toString() {
         return "Pair(" + _1 + "," + _2 + ")";
     }
+
+    @Override
+    public boolean equals( Object o ) {
+        if ( this == o ) { return true; }
+        if ( o == null || getClass() != o.getClass() ) { return false; }
+
+        Pair pair = (Pair) o;
+
+        if ( _1 != null ? !_1.equals( pair._1 ) : pair._1 != null ) { return false; }
+        if ( _2 != null ? !_2.equals( pair._2 ) : pair._2 != null ) { return false; }
+
+        return true;
+    }
+
+    @Override
+    public int hashCode() {
+        int result = _1 != null ? _1.hashCode() : 0;
+        result = 31 * result + ( _2 != null ? _2.hashCode() : 0 );
+        return result;
+    }
 }
